--- a/src/components/DynamicBackground.css
+++ b/src/components/DynamicBackground.css
@@ -1,5 +1,6 @@
 .dynamic_background {
   position: absolute;
+  top: 0;
   width: 100%;
   height: 100%;
 }
